--- a/css/style.css
+++ b/css/style.css
@@ -42,27 +42,40 @@ header{
     padding-left:8px;
     margin-bottom: 10px;;
 }
+
 a.logo{
     font-size: 4rem;
     line-height: 25px;
     margin-bottom: 15px;
     display: block;
 }
+/* lAYOUT 5 */
+.layout5 .logo-container{
+    text-align: center;
+}
+.layout5 a.logo{font-size:14px;}
 .nav{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgb(41, 38, 38);
     padding: 15px 0;
     margin-bottom:10px
 }
+#header_layout1 .nav{
+    background: rgb(41, 38, 38);
+
+}
+.navbar{padding: 8px 25px;}
 .navbar .nav{
     /* align-self: flex-start; */
-    justify-content: space-around;
+    justify-content: flex-start;
     gap: 15px;
-    flex-direction: row;
-    align-items: flex-start;
-    align-content: flex-start;
+    padding:0;
+    justify-self: stretch;
+    /* flex-direction: row; */
+    /* align-items: flex-start; */
+    /* align-content: flex-start; */
+    flex-wrap: wrap;
 
 }
 ul li{
@@ -71,9 +84,12 @@ ul li{
 .nav a{font-size: 14px;color: #fff;font-weight: bold; padding: 5px 8px;}
 .navbar .nav a{
     border: 1px solid red;
+    color: #000;
+    min-width: 200px;
 }
 section{
-    padding: 8px 25px;
+    padding: 8px
+     25px;
     padding-top:0;
 }
 .banner .box-container{
@@ -81,7 +97,7 @@ section{
     justify-content: center;
     align-items: center;
     min-height: 30rem;
-    background: rgb(8, 54, 93);
+    background: rgb(55, 59, 63);
     border: 1px solid red;
 }
 .banner .box{
@@ -93,9 +109,10 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 20rem;
+    min-height: 30rem;
     background: rgb(37, 4, 126);
     border: 1px solid red;
+    color: #fff;
 }
 
 .main-container .box-container{
@@ -108,13 +125,28 @@ section{
 }
 #layout1 .box-container{
     grid-template-columns: 1fr 3fr;
+    /* grid-template-rows: 600px; */
+    min-height: 400px;
 }
 #layout2 .box-container{
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: auto auto auto;
+    min-height: 400px;
 }
 #layout3 .box-container{
     grid-template-columns: 1fr 1fr 7fr;
     /* grid-auto-rows: 100px; */
+    min-height: 600px;
+}
+#layout3 nav a{
+    display: block;
+    padding: 15px 20px;
+    text-align: left;
+}
+#layout3 .content{
+    min-height: 150px;
+}
+#layout3 .body-area{
+    min-height: 400px;
 }
 #layout5 .box-container{
     grid-template-columns: 3fr 1fr 2fr;
@@ -161,6 +193,13 @@ section{
 #layout5 .item1{
     grid-column: 1 / span 2;
     grid-row: 1 /3;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+#layout5 .item3{
+    /* grid-template-rows: 400px; */
+    min-height:300px;
 }
 .main-container .sidebar{
     margin-right:15px;
@@ -188,4 +227,8 @@ footer p span{
     justify-content: center;
     align-items: center;
     min-height: 100px;
+}
+
+@media (min-width: 700px) {
+    
 }
