--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,85 @@ footer p span{
     min-height: 100px;
 }
 
-@media (min-width: 700px) {
+/* form layout css */
+.wrapper{
+    background: #ddd;
+    padding: 50px 100px;
+    border: 1px solid gray;
+}
+.wrapper h1{font-size: 20px;font-weight: bold;margin-bottom:5px;}
+.wrapper p{font-size: 14px; padding-bottom:10px;}
+.wrapper .row{
+    display:block;margin-bottom:10px;
     
+    overflow: hidden;
+}
+.wrapper .row .left-row, .row .right-row{overflow: hidden; width: 48%;display: block}
+
+.row .left-row{margin-right: 10px;float: left}
+.row .right-row{float: right}
+.wrapper .row input.form-control{width: 100%;border: 1px solid #ccd0d5;background: #f5f6f7; min-height: 30px;padding: 11px;}
+.wrapper label.lable{
+    display:block;
+    margin-bottom:5px;
+}
+.wrapper label{
+    font-size:14px;
+}
+select.form-select{
+    border: 1px solid #ccd0d5;background: #f5f6f7;padding: 11px;
+    min-width: 200px;
+}
+.border_box{
+    border: 1px solid #ccd0d5;
+    padding: 11px;
+    background: #f5f6f7;
+    
+    display: inline-block;
+}
+.border_box label{
+    padding-right: 30px;
+}
+.btn{
+    height: 36px;background: #00a400;
+    font-size: 18px;
+    padding: 0 32px;
+    border-radius: 6px;
+    color: #fff;
+    font-weight:bold;
+}
+
+.table{
+    border: 1px solid #ddd;
+    width: 100%;
+    background: #fff;
+    margin-top: 15px;
+}
+table, tr, th, td{
+    border-collapse: collapse;
+    font-size: 14px;
+}
+.table thead th{
+    padding: 1.5rem;
+    text-align: left;
+}
+.table thead th, .table tbody tr td{
+    border-bottom: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+}
+.table thead th:last-child, .table tbody tr td:last-child{
+    border-right: none;
+}
+.table tbody tr td{
+    padding: 1.5rem;
+}
+.table tbody tr:last-child td{
+    border-bottom: 0;
+}
+.table caption{
+    border: 1px solid mediumaquamarine;
+    color: cornflowerblue;
+    font-size: 2rem;
+    text-transform: uppercase;
+    font-weight: bold;
 }
